# EDA-llama-index

./: Makefile  README.md  coa_developement.ipynb  coa_main.ipynb  ingest.py  main.ipynb  main.py  pyproject.toml  requirements.txt
agents/coa/: workflow.py
agents/coa/tools_handler/: tool_retriver.py
agents/coa_agent/: arithmetic_validator_tool_spec.py  calculator_tool_spec.py  coa_origin.ipynb  coa_workflow.ipynb  events.py  main.ipynb  steps.py  workflow.py
agents/coa_agent/output_parser/: custom.py
agents/coa_agent/prompts/: evaluator.py  refining.py
agents/coa_agent/validator/: custom_relevancy.py  relevancy_eval.py
agents/pdf_agent_reader/: pdf_agent.ipynb
agents/pdf_agent_reader/workflows/: pdf_ingestion.ipynb
agents/pdf_reader_agent/: concierge_flows.html  events.py  main.ipynb  pdf_agent.ipynb  steps.py  workflow.py
agents/pdf_reader_agent/concierge/: event.py  pdf_agent.ipynb  steps.py  workflow.py
agents/pdf_reader_agent/concierge/ingestion/utils/: pdf_processor.py
agents/pdf_reader_agent/diagrams/: workflow_recent.html
agents/pdf_reader_agent/ingestion/: workflow_all.html  workflow_recent.html
agents/pdf_reader_agent/ingestion/vector_store/pinecone/: client.py
agents/pdf_reader_agent/orchestrator/ingestion/vector_store/pinecone/: client.py
agents/pdf_reader_agent/orchestrator/rag/: query_engine.py
agents/pdf_reader_agent/orchestrator/utils/: pdf_processor.py
notebooks/: main.ipynb
notebooks/coa_agent/: arithmetic_validator_tool_spec.py  coa_origin.ipynb  coa_uber_lyft.ipynb  coa_workflow_calculator.ipynb
notebooks/coa_agent/storage/lyft/: docstore.json  index_store.json
notebooks/coa_agent/storage/uber/: docstore.json  index_store.json
notebooks/concept/: output.json  workflow.ipynb
