[tool.poetry]
name = "eda-llama-index"
version = "0.1.0"
description = ""
authors = ["thudoan1706 <thudoan1706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index-llms-ollama = "^0.2.2"
llama-index = "^0.10.65"
llama-index-core = "^0.10.65"
llama-index-llms-openai = "^0.1.29"
llama-index-utils-workflow = "^0.1.1"
pdfplumber = "^0.11.3"
llama-index-vector-stores-pinecone = "^0.1.9"
autopep8 = "^2.3.1"
llama-index-embeddings-openai = "^0.1.11"
llama-index-packs-agents-coa = "^0.1.0"
matplotlib = "^3.9.2"
networkx = "^3.3"
llama-index-postprocessor-cohere-rerank = "^0.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
