[tool.poetry]
name = "eda-llama-index"
version = "0.1.0"
description = ""
authors = ["thudoan1706 <thudoan1706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pdfplumber = "^0.11.3"
autopep8 = "^2.3.1"
llama-index-packs-agents-coa = "0.2.0"
matplotlib = "^3.9.2"
networkx = "^3.3"
llama-index = "0.11.1"
llama-index-core = "0.11.1"
llama-index-utils-workflow = "0.2.0"
llama-index-embeddings-openai = "0.2.3"
llama-index-vector-stores-pinecone = "0.2.1"
llama-index-llms-ollama = "0.3.0"
llama-index-llms-openai = "0.2.0"
huggingface-hub = { extras = ["inference"], version = ">=0.23.0,<0.24.0" }
llama-index-llms-huggingface = "^0.3.1"
llama-index-llms-huggingface-api = "^0.2.0"
transformers = {extras = ["torch"], version = "^4.44.2"}
certifi = "^2024.7.4"
prometheus-eval = "^0.1.19"
vllm = "^0.5.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
